Some fixes in spacing and style for Longin components

--- a/src/components/primaryBtn/PrimaryBtn.css
+++ b/src/components/primaryBtn/PrimaryBtn.css
@@ -1,9 +1,10 @@
 .custom-button{
     width: 300px;
-    height: 36px;
-    border-radius: 4px;
+    height: 52px;
+    border-radius: var(--border-rad-comp);
     cursor: pointer;
     font-size: 16px;
+    font-weight: 500;
 }
 
 .signin{
