--- a/src/styles/varibles.css
+++ b/src/styles/varibles.css
@@ -24,5 +24,7 @@
     --ok: #199A46;
 
     /* others */
-    --font-family: "Inter, system-ui, Avenir, Helvetica, Arial, sans-serif";
+    --font-family: "Inter, Helvetica, Arial, sans-serif";
+    --border-rad-comp: 8px;
+    --border-rad-surf: 12px;
 }
